--- a/index.html
+++ b/index.html
@@ -1,37 +1,118 @@
 <!DOCTYPE html>
-<html lang="fi">
+<html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Verkkokauppa – Etusivu</title>
-  <link rel="stylesheet" href="styles.css" />
+    <meta charset="UTF-8" />
+    <title>Nest & Living</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <!-- Tähän ulkoinen header ladataan -->
-  <div id="header-placeholder"></div>
+    <!-- ===================== HEADER / NAVIGATION ===================== -->
+    <header>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="#about">What is Nest & Living?</a></li>
+                <li><a href="#collection">Nest & Living Collection</a></li>
+                <li><a href="#solutions">Bedroom Solutions</a></li>
+                <li><a href="#clients">Clients</a></li>
+                <li><a href="#contact">Contact</a></li>
+                <li>
+                    <span>Categories ▼</span>
+                    <ul>
+                        <li><a href="continental-beds.html">Continental Beds</a></li>
+                        <li><a href="adjustable-beds.html">Adjustable Beds</a></li>
+                        <li><a href="spring-mattress.html">Spring Mattress</a></li>
+                        <li><a href="box-spring-beds.html">Box Spring Beds</a></li>
+                    </ul>
+                </li>
+            </ul>
+        </nav>
+    </header>
 
-  <main>
-    <h1>Tervetuloa verkkokauppaamme!</h1>
-    <p>Esittelytekstiä</p>
-    <!-- muu sisältö -->
-  </main>
+    <!-- ===================== HERO SECTION ===================== -->
+    <section id="hero">
+        <h1>DISCOVER THE LUXURY OF<br />NEST & LIVING</h1>
+        <p>EXCLUSIVE BEDROOM solutions</p>
+    </section>
 
-  <script>
-    // Ladataan header.html ja asetetaan se placeholder‐diviin
-    fetch('/header.html')
-      .then(response => {
-        if (!response.ok) {
-          throw new Error('Headerin lataus epäonnistui: ' + response.status);
-        }
-        return response.text();
-      })
-      .then(html => {
-        document.getElementById('header-placeholder').innerHTML = html;
-      })
-      .catch(err => {
-        console.error(err);
-        // Voit halutessasi näyttää virheviestin tai jättää headerin tyhjäksi
-      });
-  </script>
+    <!-- ===================== ABOUT / BRAND STORY ===================== -->
+    <section id="about">
+        <h2>What is Nest & Living?</h2>
+        <p>
+            Welcome to Nest & Living, your premier destination for luxurious yet accessible bedroom furniture. Our thoughtfully curated collection is crafted to elevate your bedroom with stylish, timeless elegance while providing unmatched comfort and ergonomic support. Each piece in the Nest & Living family combines high-quality craftsmanship with contemporary designs, making it easier than ever to create a space that reflects your unique taste and lifestyle.
+        </p>
+
+        <h3>Brand Story</h3>
+        <p>
+            Nest & Living – Unelma paremmasta levosta &amp; Laatua jokaisen ulottuville<br />
+            Nest & Livingin tarina alkaa kahdesta ihmisestä, joita yhdisti yhteinen tavoite: tehdä levollisista yöunista jokaisen saavutettavissa oleva elämys. Brändin takana ovat pitkäaikaiset nukkumisen asiantuntijat, Tony ja Petri, joilla on vuosikymmenten kokemus huonekalu- ja sisustusalan parissa. He olivat nähneet läheltä, miten markkinoilla olevat sängyt ja patjat eivät aina vastanneet ihmisten todellisia tarpeita – korkea hinta ei aina merkinnyt parempaa laatua, ja liian usein tavalliset kuluttajat joutuivat tyytymään kompromisseihin mukavuuden ja kestävyyden suhteen.
+        </p>
+        <p>
+            Inspiraation kipinä syttyi eräänä iltana, kun he keskustelivat omista kokemuksistaan ja siitä, miten vaikeaa oli löytää oikeasti hyvää sänkyä, joka ei maksaisi maltaita. Tämä herätti kysymyksen: miksi laadukas uni oli yhä monille vain etuoikeus, eikä perusoikeus? Silloin he päättivät muuttaa tämän ja ryhtyivät työhön – tavoitteena luoda tuotemerkki, joka yhdistäisi korkealaatuiset materiaalit, huippusuunnittelun ja kohtuuhintaisuuden.
+        </p>
+        <p>
+            Kaverukset ymmärsivät, että sänky on muutakin kuin pelkkä huonekalu – se on paikka, jossa keho ja mieli keräävät voimaa. Tämä ajatus ohjasi jokaista päätöstä, jonka he tekivät Nest & Livingin ensimmäisiä tuotteita suunnitellessaan. He halusivat, että jokainen sänky ja patja, jonka he suunnittelevat, tuntuu kodilta – turvalliselta, kestävältä ja lohdulliselta.
+        </p>
+        <p>
+            Tuotekehityksen aikana perustajat viettivät aikaa kuuntelemalla asiakkaita, tutkien uusia materiaaleja ja parhaita valmistusmenetelmiä. He halusivat varmistaa, että jokainen tuote vastaisi lupaukseensa: tarjota pitkäkestoista mukavuutta, tukea ja tyyliä. Näin syntyi Nest & Living – brändi, joka tuo mukavuutta ja laatua jokaiseen kotiin.
+        </p>
+        <p>
+            Periaate oli alusta asti selkeä: laatu ei ole vain luksusta, se on jokaisen saatavilla. Tämän sitoumuksen he toteuttavat joka päivä – auttamalla ihmisiä nukkumaan paremmin, sekä rentoutumaan paremmin ja elämään paremmin. Ja sängyt ovat vasta alkua. Tony ja Petri näkevät Nest & Livingin tulevaisuuden kodin jokaisessa huoneessa – heidän unelmansa on tuoda kokonaisvaltainen lepo- ja viihtymiskokemus sekä ripaus arjen luksusta helposti sisustaen kaikkiin suomalaisiin koteihin.
+        </p>
+    </section>
+
+    <!-- ===================== COLLECTION / NOW IN STORES ===================== -->
+    <section id="collection">
+        <h2>NOW IN STORES</h2>
+        <h3>Special prices!</h3>
+        <p>
+            At Nest & Living, we believe that exceptional quality should be within reach for everyone. Our furniture is designed with both trend-conscious aesthetics and functionality in mind, seamlessly blending modern trends with classic sophistication. From sleek, minimal bed frames to ergonomic mattresses that support a healthy spine, our pieces offer more than just beauty—they enhance your comfort and well-being.
+        </p>
+
+        <h3>White Bedroom Concept</h3>
+        <p>
+            Explore our range to find everything you need to transform your bedroom into a sanctuary of style and relaxation. Discover the luxurious look you desire with the reliability of durable materials and refined craftsmanship. Experience how the Nest & Living collection can bring both elegance and tranquility to your home, creating a lasting impact on your daily life without compromising on affordability.
+        </p>
+    </section>
+
+    <!-- ===================== BEDROOM SOLUTIONS ===================== -->
+    <section id="solutions">
+        <h2>Bedroom Solutions</h2>
+        <p>
+            In bedrooms, people use a variety of solutions to suit their preferences and needs. Some prefer the aesthetic appeal of classic box spring beds, while others seek a bold, statement look with a continental bed. A third group values the health benefits that adjustable beds provide. Regardless of the model a customer chooses, every product in our collections is crafted from premium materials and incorporates the same high-quality ergonomic sleep solutions, ensuring comfort and durability across all styles.
+        </p>
+    </section>
+
+    <!-- ===================== CLIENTS / TESTIMONIALS ===================== -->
+    <section id="clients">
+        <h2>Clients</h2>
+        <p>
+            At Nest & Living, our clients are at the heart of everything we do. We believe that quality bedroom furniture goes beyond aesthetics—it's about creating spaces that bring comfort, functionality, and style into your life. Our commitment to customer satisfaction drives us to build lasting relationships, ensuring each piece we design and deliver transforms not just your home but also enhances your daily lifestyle.
+        </p>
+        <p>
+            Our clients’ experiences speak volumes. Explore our heartfelt testimonials to discover how Nest & Living’s bedroom furniture has helped people create their dream spaces, from cozy master suites to modern guest rooms. Whether you're seeking a more restful night's sleep or a stylish, organized bedroom, we’re here to make it happen. Join the Nest & Living family today and start transforming your home, one room at a time.
+        </p>
+        <!-- Placeholder for testimonials or links -->
+    </section>
+
+    <!-- ===================== CONTACT FORM ===================== -->
+    <section id="contact">
+        <h2>For further questions, leave a message:</h2>
+        <form action="#" method="post">
+            <label for="message">Write your message here</label><br />
+            <textarea id="message" name="message" rows="5" cols="40" placeholder="Kirjoita viestisi..."></textarea><br />
+
+            <label for="email">Enter your email here *</label><br />
+            <input type="email" id="email" name="email" placeholder="sähköpostisi@example.com" required /><br /><br />
+
+            <button type="submit">Send Message</button>
+        </form>
+    </section>
+
+    <!-- ===================== FOOTER ===================== -->
+    <footer>
+        <p>&copy; 2025 Nest & Living. All rights reserved.</p>
+    </footer>
 </body>
 </html>
