--- a/continental-beds.html
+++ b/continental-beds.html
@@ -7,19 +7,6 @@
 	<link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <!-- ===== HEADER / NAVIGATION ===== -->
-    <header>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="continental-beds.html">Continental Beds</a></li>
-                <li><a href="adjustable-beds.html">Adjustable Beds</a></li>
-                <li><a href="spring-mattress.html">Spring Mattress</a></li>
-                <li><a href="box-spring-beds.html">Box Spring Beds</a></li>
-            </ul>
-        </nav>
-    </header>
-
     <!-- ===== CONTINENTAL BEDS CONTENT ===== -->
     <main>
         <section>
@@ -57,5 +44,6 @@
     <footer>
         <p>&copy; 2025 Nest & Living. All rights reserved.</p>
     </footer>
+	<script src="script.js"></script>
 </body>
 </html>
