--- a/spring-mattress.html
+++ b/spring-mattress.html
@@ -57,5 +57,6 @@
     <footer>
         <p>&copy; 2025 Nest & Living. All rights reserved.</p>
     </footer>
+	<script src="script.js"></script>
 </body>
 </html>
