Styling and stuff.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </section>
 
     <!-- ===================== ABOUT / BRAND STORY ===================== -->
-    <section id="about">
+    <section class="with-texture" id="about">
         <h2>What is Nest &amp; Living?</h2>
         <p>
             Welcome to Nest &amp; Living, your premier destination for luxurious yet accessible bedroom furniture. Our thoughtfully curated collection is crafted to elevate your bedroom with stylish, timeless elegance while providing unmatched comfort and ergonomic support. Each piece in the Nest &amp; Living family combines high-quality craftsmanship with contemporary designs, making it easier than ever to create a space that reflects your unique taste and lifestyle.
