--- a/header.html
+++ b/header.html
@@ -1,31 +1,21 @@
-<!-- header.html -->
 <header class="header">
-  <div class="header-container">
-    <!-- Logo -->
+  <div class="header-container with-texture">
     <a href="index.html" class="logo">Nest &amp; Living</a>
 
-    <!-- Hamburger-painike -->
-    <button class="hamburger" aria-label="Avaa/Sulje valikko">
-      <span></span>
-      <span></span>
-      <span></span>
+    <button class="hamburger" aria-label="Toggle menu">
+      <span></span><span></span><span></span>
     </button>
 
-    <!-- Varsinainen navigaatio -->
     <nav class="nav">
       <ul class="nav-links">
-        <li><a href="index.html">Home</a></li>
+
         <li><a href="#about">What is Nest &amp; Living?</a></li>
-        <li><a href="#collection">Nest &amp; Living Collection</a></li>
+        <li><a href="#collection">Collection</a></li>
         <li><a href="#solutions">Bedroom Solutions</a></li>
         <li><a href="#clients">Clients</a></li>
         <li><a href="#contact">Contact</a></li>
-
-        <!-- Dropdown-kategoriat -->
         <li class="dropdown">
-          <button class="dropdown-toggle">
-            Categories <span class="arrow">▼</span>
-          </button>
+          <button class="dropdown-toggle">Categories <span class="arrow">▼</span></button>
           <ul class="dropdown-menu">
             <li><a href="continental-beds.html">Continental Beds</a></li>
             <li><a href="adjustable-beds.html">Adjustable Beds</a></li>
