Usability fixes and more categories.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- ===================== HERO SECTION ===================== -->
     <section id="hero">
         <h1>DISCOVER THE LUXURY OF<br />NEST &amp; LIVING</h1>
-        <p>EXCLUSIVE BEDROOM solutions</p>
+        <p>EXCLUSIVE BEDROOM SOLUTIONS</p>
     </section>
 
     <!-- ===================== ABOUT / BRAND STORY ===================== -->
@@ -22,14 +22,22 @@
         <!-- … loput sisällöstä säilyy ennallaan … -->
     </section>
 
-    <!-- ===================== COLLECTION / NOW IN STORES ===================== -->
+
     <section id="collection">
         <h2>NOW IN STORES</h2>
         <h3>Special prices!</h3>
         <p>
             At Nest &amp; Living, we believe that exceptional quality should be within reach for everyone. Our furniture is designed with both trend-conscious aesthetics and functionality in mind, seamlessly blending modern trends with classic sophistication. From sleek, minimal bed frames to ergonomic mattresses that support a healthy spine, our pieces offer more than just beauty—they enhance your comfort and well-being.
         </p>
-        <!-- … -->
+    </section>
+    
+    <!-- ===================== COLLECTION / NOW IN STORES ===================== -->
+    <section id="collection">
+        <h2>Nest & Living collection</h2>
+        <p>
+            Explore our range to find everything you need to transform your bedroom into a sanctuary of style and relaxation. Discover the luxurious look you desire with the reliability of durable materials and refined craftsmanship. Experience how the Nest & Living collection can bring both elegance and tranquility to your home, creating a lasting impact on your daily life without compromising on affordability.
+        </p>
+
     </section>
 
     <!-- ===================== BEDROOM SOLUTIONS ===================== -->
