--- a/header.html
+++ b/header.html
@@ -8,19 +8,26 @@
 
     <nav class="nav">
       <ul class="nav-links">
-
         <li><a href="#about">What is Nest &amp; Living?</a></li>
         <li><a href="#collection">Collection</a></li>
         <li><a href="#solutions">Bedroom Solutions</a></li>
         <li><a href="#clients">Clients</a></li>
         <li><a href="#contact">Contact</a></li>
+
         <li class="dropdown">
           <button class="dropdown-toggle">Categories <span class="arrow">▼</span></button>
           <ul class="dropdown-menu">
-            <li><a href="continental-beds.html">Continental Beds</a></li>
             <li><a href="adjustable-beds.html">Adjustable Beds</a></li>
-            <li><a href="spring-mattress.html">Spring Mattress</a></li>
+            <li><a href="upholstered-seating.html">Armchairs &amp; Sofas</a></li>            
+            <li><a href="bedding-accessories.html">Bedding Accessories</a></li>
             <li><a href="box-spring-beds.html">Box Spring Beds</a></li>
+            <li><a href="continental-beds.html">Continental Beds</a></li>
+            <li><a href="headboards.html">Headboards</a></li>
+            <li><a href="mattress-toppers.html">Mattress Toppers</a></li>
+            <li><a href="shelving-units.html">Shelving Units</a></li>
+            <li><a href="spring-mattress.html">Spring Mattresses</a></li>            
+            <li><a href="tables-chairs.html">Tables &amp; Chairs</a></li>
+
           </ul>
         </li>
       </ul>
