--- a/index.html
+++ b/index.html
@@ -2,81 +2,81 @@
 <html lang="fi">
 <head>
     <meta charset="UTF-8" />
-    <title>Nest & Living</title>
+    <title>Nest &amp; Living</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="https://use.typekit.net/rlk8ydx.css">
 </head>
 <body>
-    <!-- ===================== HERO SECTION ===================== -->
-    <section id="hero">
-        <h1>DISCOVER THE LUXURY OF<br />NEST &amp; LIVING</h1>
-        <p>EXCLUSIVE BEDROOM SOLUTIONS</p>
-    </section>
+    <!-- HEADER lisätään AJAXilla (header.html) -->
 
-    <!-- ===================== ABOUT / BRAND STORY ===================== -->
-    <section class="with-texture" id="about">
-        <h2>What is Nest &amp; Living?</h2>
-        <p>
-            Welcome to Nest &amp; Living, your premier destination for luxurious yet accessible bedroom furniture. Our thoughtfully curated collection is crafted to elevate your bedroom with stylish, timeless elegance while providing unmatched comfort and ergonomic support. Each piece in the Nest &amp; Living family combines high-quality craftsmanship with contemporary designs, making it easier than ever to create a space that reflects your unique taste and lifestyle.
-        </p>
-        <!-- … loput sisällöstä säilyy ennallaan … -->
-    </section>
+    <!-- ===================== PÄÄsisältö (WRAPPER) ===================== -->
+    <main id="content">
+        <!-- ===================== HERO SECTION ===================== -->
+        <section id="hero">
+            <h1>DISCOVER THE LUXURY OF<br />NEST &amp; LIVING</h1>
+            <p>EXCLUSIVE BEDROOM SOLUTIONS</p>
+        </section>
 
+        <!-- ===================== ABOUT / BRAND STORY ===================== -->
+        <section class="with-texture" id="about">
+            <h2>What is Nest &amp; Living?</h2>
+            <p>
+                Welcome to Nest &amp; Living, your premier destination for luxurious yet accessible bedroom furniture. Our thoughtfully curated collection is crafted to elevate your bedroom with stylish, timeless elegance while providing unmatched comfort and ergonomic support. Each piece in the Nest &amp; Living family combines high-quality craftsmanship with contemporary designs, making it easier than ever to create a space that reflects your unique taste and lifestyle.
+            </p>
+            <!-- … loput sisällöstä säilyy ennallaan … -->
+        </section>
 
-    <section id="collection">
-        <h2>NOW IN STORES</h2>
-        <h3>Special prices!</h3>
-        <p>
-            At Nest &amp; Living, we believe that exceptional quality should be within reach for everyone. Our furniture is designed with both trend-conscious aesthetics and functionality in mind, seamlessly blending modern trends with classic sophistication. From sleek, minimal bed frames to ergonomic mattresses that support a healthy spine, our pieces offer more than just beauty—they enhance your comfort and well-being.
-        </p>
-    </section>
-    
-    <!-- ===================== COLLECTION / NOW IN STORES ===================== -->
-    <section id="collection">
-        <h2>Nest & Living collection</h2>
-        <p>
-            Explore our range to find everything you need to transform your bedroom into a sanctuary of style and relaxation. Discover the luxurious look you desire with the reliability of durable materials and refined craftsmanship. Experience how the Nest & Living collection can bring both elegance and tranquility to your home, creating a lasting impact on your daily life without compromising on affordability.
-        </p>
+        <!-- ===================== COLLECTION / NOW IN STORES ===================== -->
+        <section id="collection">
+            <h2>NOW IN STORES</h2>
+            <h3>Special prices!</h3>
+            <p>
+                At Nest &amp; Living, we believe that exceptional quality should be within reach for everyone. Our furniture is designed with both trend-conscious aesthetics and functionality in mind, seamlessly blending modern trends with classic sophistication. From sleek, minimal bed frames to ergonomic mattresses that support a healthy spine, our pieces offer more than just beauty—they enhance your comfort and well-being.
+            </p>
+        </section>
+        
+        <section id="collection">
+            <h2>Nest &amp; Living collection</h2>
+            <p>
+                Explore our range to find everything you need to transform your bedroom into a sanctuary of style and relaxation. Discover the luxurious look you desire with the reliability of durable materials and refined craftsmanship. Experience how the Nest &amp; Living collection can bring both elegance and tranquility to your home, creating a lasting impact on your daily life without compromising on affordability.
+            </p>
+        </section>
 
-    </section>
+        <!-- ===================== BEDROOM SOLUTIONS ===================== -->
+        <section id="solutions">
+            <h2>Bedroom Solutions</h2>
+            <p>
+                In bedrooms, people use a variety of solutions to suit their preferences and needs. Some prefer the aesthetic appeal of classic box spring beds, while others seek a bold, statement look with a continental bed. A third group values the health benefits that adjustable beds provide. Regardless of the model a customer chooses, every product in our collections is crafted from premium materials and incorporates the same high-quality ergonomic sleep solutions, ensuring comfort and durability across all styles.
+            </p>
+        </section>
 
-    <!-- ===================== BEDROOM SOLUTIONS ===================== -->
-    <section id="solutions">
-        <h2>Bedroom Solutions</h2>
-        <p>
-            In bedrooms, people use a variety of solutions to suit their preferences and needs. Some prefer the aesthetic appeal of classic box spring beds, while others seek a bold, statement look with a continental bed. A third group values the health benefits that adjustable beds provide. Regardless of the model a customer chooses, every product in our collections is crafted from premium materials and incorporates the same high-quality ergonomic sleep solutions, ensuring comfort and durability across all styles.
-        </p>
-    </section>
+        <!-- ===================== CLIENTS / TESTIMONIALS ===================== -->
+        <section id="clients">
+            <h2>Clients</h2>
+            <p>
+                At Nest &amp; Living, our clients are at the heart of everything we do. We believe that quality bedroom furniture goes beyond aesthetics—it's about creating spaces that bring comfort, functionality, and style into your life. Our commitment to customer satisfaction drives us to build lasting relationships, ensuring each piece we design and deliver transforms not just your home but also enhances your daily lifestyle.
+            </p>
+            <!-- … -->
+        </section>
 
-    <!-- ===================== CLIENTS / TESTIMONIALS ===================== -->
-    <section id="clients">
-        <h2>Clients</h2>
-        <p>
-            At Nest &amp; Living, our clients are at the heart of everything we do. We believe that quality bedroom furniture goes beyond aesthetics—it's about creating spaces that bring comfort, functionality, and style into your life. Our commitment to customer satisfaction drives us to build lasting relationships, ensuring each piece we design and deliver transforms not just your home but also enhances your daily lifestyle.
-        </p>
-        <!-- … -->
-    </section>
+        <!-- ===================== CONTACT FORM ===================== -->
+        <section id="contact">
+            <h2>For further questions, leave a message:</h2>
+            <form action="#" method="post">
+                <label for="message">Write your message here</label><br />
+                <textarea id="message" name="message" rows="5" cols="40" placeholder="Kirjoita viestisi..."></textarea><br />
 
-    <!-- ===================== CONTACT FORM ===================== -->
-    <section id="contact">
-        <h2>For further questions, leave a message:</h2>
-        <form action="#" method="post">
-            <label for="message">Write your message here</label><br />
-            <textarea id="message" name="message" rows="5" cols="40" placeholder="Kirjoita viestisi..."></textarea><br />
+                <label for="email">Enter your email here *</label><br />
+                <input type="email" id="email" name="email" placeholder="sähköpostisi@example.com" required /><br /><br />
 
-            <label for="email">Enter your email here *</label><br />
-            <input type="email" id="email" name="email" placeholder="sähköpostisi@example.com" required /><br /><br />
+                <button type="submit">Send Message</button>
+            </form>
+        </section>
+    </main>
+    <!-- ===================== END PÄÄsisältö ===================== -->
 
-            <button type="submit">Send Message</button>
-        </form>
-    </section>
-
-    <!-- ===================== FOOTER ===================== -->
-    <footer>
-        <p>&copy; 2025 Nest &amp; Living. All rights reserved.</p>
-    </footer>
-
-    <!-- Linkit JavaScript-tiedostoihin -->
+    <!-- FOOTER lisätään AJAXilla (footer.html) -->
     <script src="script.js"></script>
 </body>
 </html>
