--- a/adjustable-beds.html
+++ b/adjustable-beds.html
@@ -2,31 +2,30 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8" />
-    <title>Adjustable Beds – Nest & Living</title>
+    <title>Adjustable Beds – Nest &amp; Living</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-    <!-- ===== ADJUSTABLE BEDS CONTENT ===== -->
-    <main>
+    <!-- HEADER lisätään AJAXilla (header.html) -->
+
+    <main id="content">
         <section>
             <h1>Adjustable Beds</h1>
-            <!-- Placeholder for a representative image -->
+            <!-- Representative image -->
             <img src="images/adjustable-beds.jpg" alt="Adjustable Bed Example" width="600" />
 
-            <h2>Ergonomic Support & Personalized Comfort</h2>
+            <h2>Ergonomic Support &amp; Personalized Comfort</h2>
             <p>
-                Nest & Livingin Adjustable Beds -mallisto on suunniteltu erityisesti terveyttä ja hyvinvointia silmällä pitäen. Säädettävät sänkyrungot mahdollistavat pää- ja jalkopään noston portaattomasti käyttäjän toiveiden mukaisesti. Tämä on oleellista esimerkiksi selkä- tai nivelkipujen lievittämisessä sekä hengitysteiden avaamisessa. Patjamme muotoutuvat kehoa tukevasti, kun taas rungon eri kulmat auttavat löytämään juuri sinulle sopivan nukkuma-asennon.
+                Nest &amp; Living’s Adjustable Beds -mallisto on suunniteltu erityisesti terveyttä ja hyvinvointia silmällä pitäen. Säädettävät sänkyrungot mahdollistavat pää- ja jalkopään noston portaattomasti käyttäjän toiveiden mukaisesti. Tämä on oleellista esimerkiksi selkä- tai nivelkipujen lievittämisessä sekä hengitysteiden avaamisessa. Patjamme muotoutuvat kehoa tukevasti, kun taas rungon eri kulmat auttavat löytämään juuri sinulle sopivan nukkuma-asennon.
             </p>
-            <p>
-                Adjustable Beds -rungot sisältävät:
-                <ul>
-                    <li>Moottoroitu aputuki, joka nostaa pää- ja jalkopään portaattomasti kaukosäätimellä.</li>
-                    <li>Pussijousistolla varustetun runkopatjan, joka takaa joustavan ja ergonomisen tuen eri asennoissa.</li>
-                    <li>Erityinen anti-snore-toiminto, joka nostaa vain pään osaa portaattomasti (kahden moottorin malli).</li>
-                    <li>Helppohoitoinen petari, jonka päällinen on irrotettava ja pestävä.</li>
-                </ul>
-            </p>
+            <p>Adjustable Beds -rungot sisältävät:</p>
+            <ul>
+                <li>Moottoroitu aputuki, joka nostaa pää- ja jalkopään portaattomasti kaukosäätimellä.</li>
+                <li>Pussijousistolla varustetun runkopatjan, joka takaa joustavan ja ergonomisen tuen eri asennoissa.</li>
+                <li>Erityinen anti-snore-toiminto, joka nostaa vain pään osaa portaattomasti (kahden moottorin malli).</li>
+                <li>Helppohoitoinen petari, jonka päällinen on irrotettava ja pestävä.</li>
+            </ul>
             <h3>Health Benefits:</h3>
             <ul>
                 <li>Vähentää selkä- ja nivelkipuja, kun saat selkärangan ja lonkat neutraaliin asentoon.</li>
@@ -37,13 +36,11 @@
             <p>
                 Saatavana leveydet 80 cm, 90 cm, 120 cm, 140 cm ja 160 cm (pituus aina 200 cm). Valitse omasi ja koe yksilöllinen tukemme, joka mukautuu sekä uniasentoihisi että arjen tarpeisiin.
             </p>
+            <a href="index.html">← Back to Home</a>
         </section>
     </main>
 
-    <!-- ===== FOOTER ===== -->
-    <footer>
-        <p>&copy; 2025 Nest & Living. All rights reserved.</p>
-    </footer>
-	<script src="script.js"></script>
+    <!-- FOOTER lisätään AJAXilla (footer.html) -->
+    <script src="script.js"></script>
 </body>
 </html>
