--- a/header.html
+++ b/header.html
@@ -2,7 +2,7 @@
   <div class="header-container with-texture">
     <a href="index.html" class="logo">Nest &amp; Living</a>
 
-    <button class="hamburger" aria-label="Toggle menu">
+    <button type="button" class="hamburger" aria-label="Toggle menu">
       <span></span><span></span><span></span>
     </button>
 
@@ -15,19 +15,20 @@
         <li><a href="#contact">Contact</a></li>
 
         <li class="dropdown">
-          <button class="dropdown-toggle">Categories <span class="arrow">▼</span></button>
+          <button type="button" class="dropdown-toggle">
+            Categories <span class="arrow">▼</span>
+          </button>
           <ul class="dropdown-menu">
             <li><a href="adjustable-beds.html">Adjustable Beds</a></li>
-            <li><a href="upholstered-seating.html">Armchairs &amp; Sofas</a></li>            
+            <li><a href="upholstered-seating.html">Armchairs &amp; Sofas</a></li>
             <li><a href="bedding-accessories.html">Bedding Accessories</a></li>
             <li><a href="box-spring-beds.html">Box Spring Beds</a></li>
             <li><a href="continental-beds.html">Continental Beds</a></li>
             <li><a href="headboards.html">Headboards</a></li>
             <li><a href="mattress-toppers.html">Mattress Toppers</a></li>
             <li><a href="shelving-units.html">Shelving Units</a></li>
-            <li><a href="spring-mattress.html">Spring Mattresses</a></li>            
+            <li><a href="spring-mattress.html">Spring Mattresses</a></li>
             <li><a href="tables-chairs.html">Tables &amp; Chairs</a></li>
-
           </ul>
         </li>
       </ul>
