--- a/index.html
+++ b/index.html
@@ -17,12 +17,14 @@
         </button>
         <!-- ===================== HERO SECTION ===================== -->
         <section id="hero">
+        <div class="hero-wrapper">
         <div class="logo-wrapper">
            <span class="logo-blur" aria-hidden="true"></span>   <!-- pelkkä blur -->
            <span class="logo-main"></span>
         </div>
             <h1>DISCOVER THE LUXURY OF<br />NEST &amp; LIVING</h1>
             <p>EXCLUSIVE BEDROOM SOLUTIONS</p>
+            </div>
         </section>
 
         <!-- ===================== ABOUT / BRAND STORY ===================== -->
