Adding collections etc.

--- a/index.html
+++ b/index.html
@@ -11,10 +11,7 @@
     <!-- HEADER lisätään AJAXilla (header.html) -->
 
     <!-- ===================== PÄÄsisältö (WRAPPER) ===================== -->
-    <main id="content">
-        <button id="scrollTopBtn" aria-label="Palaa sivun alkuun">
-          ↑
-        </button>
+
         <!-- ===================== HERO SECTION ===================== -->
         <section id="hero">
         <div class="hero-wrapper">
@@ -47,12 +44,39 @@
             </p>
         </section>
         
-        <section id="collection">
-            <h2>Nest &amp; Living collection</h2>
-            <p>
-                Explore our range to find everything you need to transform your bedroom into a sanctuary of style and relaxation. Discover the luxurious look you desire with the reliability of durable materials and refined craftsmanship. Experience how the Nest &amp; Living collection can bring both elegance and tranquility to your home, creating a lasting impact on your daily life without compromising on affordability.
-            </p>
-        </section>
+<section class="with-texture" id="collection">
+  <h2>Nest &amp; Living collection</h2>
+
+  <p>
+    Explore our range to find everything you need to transform your bedroom into a sanctuary of style and relaxation. Discover the luxurious look you desire with the reliability of durable materials and refined craftsmanship. Experience how the Nest &amp; Living collection can bring both elegance and tranquility to your home, creating a lasting impact on your daily life without compromising on affordability.
+  </p>
+
+  <!-- main-collection buttons -->
+    <div class="collection-buttons">
+      <a href="bedroom.html" class="collection-btn">
+        <img src="images/bedroom.svg" alt="Bedroom icon" />
+        Bedroom
+      </a>
+
+      <a href="livingroom.html" class="collection-btn">
+        <img src="images/livingroom.svg" alt="Living room icon" />
+        Living room
+      </a>
+
+      <a href="diningroom.html" class="collection-btn">
+        <img src="images/diningroom.svg" alt="Dining room icon" />
+        Dining room
+      </a>
+
+      <a href="storage-shelving.html" class="collection-btn">
+        <img src="images/storage-shelving.svg" alt="Storage &amp; Shelving icon" />
+        Storage &amp; Shelving
+      </a>
+    </div>
+
+</section>
+
+
 
         <!-- ===================== BEDROOM SOLUTIONS ===================== -->
         <section id="solutions">
