--- a/footer.html
+++ b/footer.html
@@ -1,60 +1,49 @@
 <!-- footer.html -->
-<footer class="footer">
-  <!-- Tämä wrapper on leveydeltään koko näytön kokoinen,
-       mutta sisällölle asetetaan sisäisesti maksimi–leveys ja keskitys -->
+<button id="scroll-btn" aria-label="Move back to the top">↑</button>
+<footer class="footer with-texture">
   <div class="footer-inner">
-    <!-- =====================================
-         1) Kolumnit: Yritys | Tuki | Seuraa meitä
-         ===================================== -->
     <div class="footer-columns">
-      <!-- Yritys -->
       <div class="footer-column">
-        <h4>Yritys</h4>
+        <h4>Company</h4>
         <ul>
-          <li><a href="about.html">Tietoa meistä</a></li>
-          <li><a href="careers.html">Ura</a></li>
-          <li><a href="blog.html">Blogi</a></li>
+          <li><a href="about.html">About Us</a></li>
+          <li><a href="careers.html">Careers</a></li>
+          <li><a href="blog.html">Blog</a></li>
         </ul>
       </div>
 
-      <!-- Tuki -->
+      <!-- Support -->
       <div class="footer-column">
-        <h4>Tuki</h4>
+        <h4>Support</h4>
         <ul>
-          <li><a href="help-center.html">Asiakaspalvelu</a></li>
-          <li><a href="faq.html">Usein kysytyt kysymykset</a></li>
-          <li><a href="contact.html">Ota yhteyttä</a></li>
+          <li><a href="help-center.html">Customer Service</a></li>
+          <li><a href="faq.html">Frequently Asked Questions</a></li>
+          <li><a href="contact.html">Contact Us</a></li>
         </ul>
       </div>
 
-      <!-- Seuraa meitä -->
+      <!-- Follow Us -->
       <div class="footer-column">
-        <h4>Seuraa meitä</h4>
+        <h4>Follow Us</h4>
         <ul class="social-media-list">
           <!-- Facebook -->
           <li>
             <a href="https://www.facebook.com/NestAndLiving" target="_blank" rel="noopener">
-              <svg class="social-icon" viewBox="0 0 24 24" aria-hidden="true" focusable="false">
-                <path d="M22.675 0h-21.35C.594 0 0 .593 0 1.326v21.348C0 23.407.594 24 1.325 24H12.82v-9.294H9.692v-3.622h3.128V8.413c0-3.1 1.893-4.788 4.659-4.788 1.325 0 2.463.099 2.794.143v3.24l-1.918.001c-1.504 0-1.795.714-1.795 1.763v2.31h3.587l-.467 3.622h-3.12V24h6.116c.73 0 1.324-.593 1.324-1.326V1.326C24 .593 23.406 0 22.675 0z"/>
-              </svg>
+              <img src="images/fb.svg" alt="Facebook" class="social-icon" />
               <span>Facebook</span>
             </a>
           </li>
           <!-- Instagram -->
           <li>
             <a href="https://www.instagram.com/NestAndLiving" target="_blank" rel="noopener">
-              <svg class="social-icon" viewBox="0 0 24 24" aria-hidden="true" focusable="false">
-                <path d="M7.75 2h8.5A5.75 5.75 0 0 1 22 7.75v8.5A5.75 5.75 0 0 1 16.25 22h-8.5A5.75 5.75 0 0 1 2 16.25v-8.5A5.75 5.75 0 0 1 7.75 2zm0 1.5A4.25 4.25 0 0 0 3.5 7.75v8.5A4.25 4.25 0 0 0 7.75 20.5h8.5a4.25 4.25 0 0 0 4.25-4.25v-8.5A4.25 4.25 0 0 0 16.25 3.5h-8.5zM12 7a5 5 0 1 1 0 10 5 5 0 0 1 0-10zm0 1.5a3.5 3.5 0 1 0 0 7 3.5 3.5 0 0 0 0-7zM18.5 5.25a1.25 1.25 0 1 1-2.5 0 1.25 1.25 0 0 1 2.5 0z"/>
-              </svg>
+              <img src="images/ig.svg" alt="Instagram" class="social-icon" />
               <span>Instagram</span>
             </a>
           </li>
           <!-- Pinterest -->
           <li>
             <a href="https://www.pinterest.com/NestAndLiving" target="_blank" rel="noopener">
-              <svg class="social-icon" viewBox="0 0 24 24" aria-hidden="true" focusable="false">
-                <path d="M12 0C5.373 0 0 5.373 0 12c0 5.302 3.438 9.8 8.207 11.387-.114-.966-.216-2.453.044-3.51.237-.997 1.526-6.346 1.526-6.346s-.389-.778-.389-1.925c0-1.8 1.045-3.146 2.347-3.146 1.107 0 1.642.832 1.642 1.83 0 1.115-.71 2.782-1.075 4.33-.307 1.294.65 2.348 1.929 2.348 2.315 0 3.875-2.434 3.875-5.94 0-3.103-2.234-5.281-5.422-5.281-3.693 0-5.863 2.771-5.863 5.636 0 1.112.428 2.303.961 2.948.106.126.121.236.089.363-.098.4-.319 1.294-.362 1.474-.057.237-.188.287-.435.173-1.63-.758-2.647-3.148-2.647-5.064 0-4.125 3.078-7.912 8.876-7.912 4.659 0 8.288 3.324 8.288 7.761 0 4.631-2.92 8.35-6.979 8.35-1.361 0-2.642-.707-3.079-1.54 0 0-.732 2.797-.913 3.359-.331 1.157-1.222 2.602-1.825 3.489 1.371.423 2.815.652 4.315.652 6.627 0 12-5.373 12-12S18.627 0 12 0z"/>
-              </svg>
+              <img src="images/pinterest.svg" alt="Pinterest" class="social-icon" />
               <span>Pinterest</span>
             </a>
           </li>
@@ -63,19 +52,19 @@
     </div>
 
     <!-- =====================================
-         2) Osoite ja yhteystiedot (niiden allekkain)
+         2) Address and contact information
          ===================================== -->
     <div class="footer-contact">
-      <p>Nest &amp; Living Oy</p>
-      <p>Esimerkkikatu 10, 00100 Helsinki, Suomi</p>
-      <p>Puh: <a href="tel:+358401234567">+358 40 123 4567</a> | Sähköposti: <a href="mailto:info@nestandliving.fi">info@nestandliving.fi</a></p>
+      <p>Nest &amp; Living Ltd</p>
+      <p>Esimerkkikatu 10, 00100 Helsinki, Finland</p>
+      <p>Tel: <a href="tel:+358401234567">+358 40 123 4567</a> | Email: <a href="mailto:info@nestandliving.fi">info@nestandliving.fi</a></p>
     </div>
 
     <!-- =====================================
-         3) Copyright-teksti
+         3) Copyright text
          ===================================== -->
     <div class="footer-bottom">
-      <p>&copy; 2025 Nest &amp; Living. Kaikki oikeudet pidätetään.</p>
+      <p>&copy; 2025 Nest &amp; Living. All rights reserved.</p>
     </div>
   </div>
 </footer>
