Styling and more buttons.

--- a/index.html
+++ b/index.html
@@ -33,17 +33,7 @@
             <!-- … loput sisällöstä säilyy ennallaan … -->
         </section>
 
-        <!-- ===================== COLLECTION / NOW IN STORES ===================== -->
-        <section id="promo">
-            <div class="promo-banner">
-                <h2 class="promo-banner__title">NOW IN STORES</h2>
-                <h3 class="promo-banner__subtitle">Special prices!</h3>
-            </div>
-            <p>
-                At Nest &amp; Living, we believe that exceptional quality should be within reach for everyone. Our furniture is designed with both trend-conscious aesthetics and functionality in mind, seamlessly blending modern trends with classic sophistication. From sleek, minimal bed frames to ergonomic mattresses that support a healthy spine, our pieces offer more than just beauty—they enhance your comfort and well-being.
-            </p>
-        </section>
-        
+        <!-- ===================== COLLECTION / NOW IN STORES ===================== -->  
 <section class="with-texture" id="collection">
   <h2>Nest &amp; Living collection</h2>
 
@@ -76,15 +66,46 @@
 
 </section>
 
-
-
-        <!-- ===================== BEDROOM SOLUTIONS ===================== -->
-        <section id="solutions">
-            <h2>Bedroom Solutions</h2>
+        <section id="promo">
+            <div class="promo-banner with-texture">
+                <h2 class="promo-banner__title">NOW IN STORES</h2>
+                <h3 class="promo-banner__subtitle with-texture">Special prices!</h3>
+            </div>
             <p>
-                In bedrooms, people use a variety of solutions to suit their preferences and needs. Some prefer the aesthetic appeal of classic box spring beds, while others seek a bold, statement look with a continental bed. A third group values the health benefits that adjustable beds provide. Regardless of the model a customer chooses, every product in our collections is crafted from premium materials and incorporates the same high-quality ergonomic sleep solutions, ensuring comfort and durability across all styles.
+                At Nest &amp; Living, we believe that exceptional quality should be within reach for everyone. Our furniture is designed with both trend-conscious aesthetics and functionality in mind, seamlessly blending modern trends with classic sophistication. From sleek, minimal bed frames to ergonomic mattresses that support a healthy spine, our pieces offer more than just beauty—they enhance your comfort and well-being.
             </p>
         </section>
+
+        <!-- ===================== BEDROOM SOLUTIONS ===================== -->
+<section class="with-texture" id="solutions">
+  <h2>Bedroom Solutions</h2>
+  <p>
+    In bedrooms, people use a variety of solutions to suit their preferences and needs. Some prefer the aesthetic appeal of classic box spring beds, while others seek a bold, statement look with a continental bed. A third group values the health benefits that adjustable beds provide. Regardless of the model a customer chooses, every product in our collections is crafted from premium materials and incorporates the same high-quality ergonomic sleep solutions, ensuring comfort and durability across all styles.
+  </p>
+
+  <div class="solution-buttons">
+    <a href="beds.html" class="solution-btn">
+      <img src="images/beds.svg" alt="Beds icon" />
+      Beds
+    </a>
+
+    <a href="bedding-accessories.html" class="solution-btn">
+      <img src="images/bedding-accessories.svg" alt="Bedding Accessories icon" />
+      Bedding Accessories
+    </a>
+
+    <a href="headboards.html" class="solution-btn">
+      <img src="images/headboards.svg" alt="Headboards icon" />
+      Headboards
+    </a>
+
+    <a href="mattresses-toppers.html" class="solution-btn">
+      <img src="images/mattresses-toppers.svg" alt="Mattresses &amp; Toppers icon" />
+      Mattresses &amp; Toppers
+    </a>
+  </div>
+</section>
+
 
         <!-- ===================== CLIENTS / TESTIMONIALS ===================== -->
         <section id="clients">
