--- a/index.html
+++ b/index.html
@@ -44,22 +44,22 @@
   <!-- main-collection buttons -->
     <div class="collection-buttons">
       <a href="bedroom.html" class="collection-btn">
-        <img src="images/bedroom.svg" alt="Bedroom icon" />
+        <img src="images/bedroom.png" alt="Bedroom icon" />
         Bedroom
       </a>
 
       <a href="livingroom.html" class="collection-btn">
-        <img src="images/livingroom.svg" alt="Living room icon" />
+        <img src="images/living-room.png" alt="Living room icon" />
         Living room
       </a>
 
       <a href="diningroom.html" class="collection-btn">
-        <img src="images/diningroom.svg" alt="Dining room icon" />
+        <img src="images/dining-room.png" alt="Dining room icon" />
         Dining room
       </a>
 
       <a href="storage-shelving.html" class="collection-btn">
-        <img src="images/storage-shelving.svg" alt="Storage &amp; Shelving icon" />
+        <img src="images/storage-shelving.png" alt="Storage &amp; Shelving icon" />
         Storage &amp; Shelving
       </a>
     </div>
@@ -85,22 +85,22 @@
 
   <div class="solution-buttons">
     <a href="beds.html" class="solution-btn">
-      <img src="images/beds.svg" alt="Beds icon" />
+      <img src="images/beds.png" alt="Beds icon" />
       Beds
     </a>
 
     <a href="bedding-accessories.html" class="solution-btn">
-      <img src="images/bedding-accessories.svg" alt="Bedding Accessories icon" />
+      <img src="images/bedding-accessories.png" alt="Bedding Accessories icon" />
       Bedding Accessories
     </a>
 
     <a href="headboards.html" class="solution-btn">
-      <img src="images/headboards.svg" alt="Headboards icon" />
+      <img src="images/headboards.png" alt="Headboards icon" />
       Headboards
     </a>
 
     <a href="mattresses-toppers.html" class="solution-btn">
-      <img src="images/mattresses-toppers.svg" alt="Mattresses &amp; Toppers icon" />
+      <img src="images/mattresses-toppers.png" alt="Mattresses &amp; Toppers icon" />
       Mattresses &amp; Toppers
     </a>
   </div>
