--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         <section id="hero">
         <div class="hero-wrapper">
         <div class="logo-wrapper">
-           <span class="logo-blur" aria-hidden="true"></span>   <!-- pelkkä blur -->
-           <span class="logo-main"></span>
+        <span class="logo-blur" aria-hidden="true"></span>   <!-- pelkkä blur -->
+        <img class="logo-main" src="images/logo.png" alt="Logo">
         </div>
             <h1>DISCOVER THE LUXURY OF<br />NEST &amp; LIVING</h1>
             <p>EXCLUSIVE BEDROOM SOLUTIONS</p>
