--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <section id="hero">
         <div class="hero-wrapper">
         <div class="logo-wrapper">
-        <span class="logo-blur" aria-hidden="true"></span>   <!-- pelkkä blur -->
+        <span class="logo-blur" aria-hidden="true"></span>
         <img class="logo-main" src="images/logo.png" alt="Logo">
         </div>
             <h1>DISCOVER THE LUXURY OF<br />NEST &amp; LIVING</h1>
@@ -66,7 +66,7 @@
 
 </section>
 
-        <section id="promo">
+        <section class="with-texture" id="promo">
             <div class="promo-banner with-texture">
                 <h2 class="promo-banner__title">NOW IN STORES</h2>
                 <h3 class="promo-banner__subtitle with-texture">Special prices!</h3>
